Agregado SASS, nuevo estilo en botón.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Jquery-validate Form</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-    <link rel="stylesheet" href="css\custom.css">
-
+    <link rel="stylesheet" href="stylesheets/custom.css">
+    <!-- <link rel="stylesheet" href="css\bootstrapbtn.css"> -->
 
 
 
@@ -18,7 +19,7 @@
                 <div class="row">
                     <div class="col-sm-8 col-sm-offset-2">
                         <div class="page-header">
-                            <div class="alert alert-primary centro" role="alert">
+                            <div class="alert alert-warning centro" role="alert">
                                 <h4>Práctica: Desarrollar un formulario con el plugin JQuery-validate con reglas (Nombre, correo y móvil).</h4>
                                 <ul>
                                     <li>Nombre: Mínimo 2 carácteres y máximo 20 carácteres</a>.</li>
@@ -61,15 +62,15 @@
         </div>
 
       <div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button type="submit" class="btn draw-border">Enviar</button>
             </div>
 
         </form>
     </div>
      
 
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.js"></script>
 <script src="js/app.js"></script>
 
@@ -79,4 +80,4 @@
 
 
 </body>
-</html>
+</html>             
